# heif-gimp-plugin

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  autogen.sh  configure  configure.ac  configure.in
help/: Makefile.in
help/en/: Makefile.in
help/images/: Makefile.in
po/: POTFILES.in  az.gmo  az.po  de.gmo  de.po  fr.gmo  fr.po  ka.po  sk.gmo  sk.po  sv.gmo  sv.po  zh_TW.gmo  zh_TW.po
scripts/: check-licenses.sh  install-ci.sh  prepare-ci.sh  run-ci.sh
src/: Makefile.am  Makefile.in  interface.c  interface.h  main.c  main.h  render.c  render.h
